Add stricter null checking in BartService